--- a/app/src/main/res/layout/activity_credential.xml
+++ b/app/src/main/res/layout/activity_credential.xml
@@ -26,6 +26,7 @@
             android:textSize="32sp"
             android:layout_gravity="bottom"
             android:layout_marginStart="32dp"/>
+
     </FrameLayout>
 
     <ImageView
@@ -60,6 +61,8 @@
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="STUDENT"
+               android:gravity="center"
+               android:drawableTop="@drawable/ic_baseline_emoji_people_24"
                app:cornerRadius="32dp"
                android:padding="16dp"
                android:layout_margin="32dp"
@@ -72,12 +75,14 @@
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="GUEST"
+               android:drawableTop="@drawable/ic_baseline_follow_the_signs_24"
                app:cornerRadius="32dp"
                android:padding="16dp"
                android:gravity="center"
                android:backgroundTint="#FB1C47"
-               android:layout_margin="32dp"
-               android:drawableTint="#810202"
+               android:layout_marginLeft="32dp"
+               android:layout_marginRight="32dp"
+                android:drawableTint="#810202"
                android:drawableRight="@drawable/ic_baseline_double_arrow_24"/>
        </LinearLayout>
 
