--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -19,5 +19,6 @@
     <style name="deepak" >
         <item name="windowActionBar">true</item>
         <item name="windowNoTitle">false</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
 </resources>
