--- a/app/src/main/res/layout/sidenavfrag_logout.xml
+++ b/app/src/main/res/layout/sidenavfrag_logout.xml
@@ -1,14 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#673AB7">
+    android:background="#ff4569"
+    android:orientation="vertical"
+    android:gravity="center">
 
+    <ImageView
+        android:id="@+id/image_image"
+        android:layout_width="wrap_content"
+        android:layout_height="150dp"
+        android:src="@drawable/avatar"/>
     <TextView
+        android:id="@+id/username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="SIDE LOGOUT"
-        android:textSize="30sp" />
+        android:textSize="42dp"
+        android:text="UID/NAME"
+        android:textStyle="bold" />
+    <Button
+        android:id="@+id/loguotButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="LOGOUT"
+        />
 
-</RelativeLayout>
+
+
+
+
+
+
+
+
+</LinearLayout>
